Various automated code cleanup